pdf added successfully and pdf view

--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-documents/picker": "^11.0.0",
+    "@react-native-documents/viewer": "^2.0.2",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/elements": "^2.8.2",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-blob-util": "^0.23.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-pdf": "^7.0.3",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
